# dbx-python-cli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  justfile  presentation.html  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  design.rst  features.rst  index.rst
docs/api/: commands.rst  core.rst  index.rst  modules.rst
docs/design/: command-structure.rst  git-operations.rst  index.rst  standalone-installation.rst  venv-strategy.rst
docs/development/: contributing.rst  documentation.rst  index.rst  setup.rst  testing.rst
docs/features/: global-options.rst  index.rst  installation.rst  just-commands.rst  mongodb-runner.rst  project-management.rst  repo-management.rst  status.rst  testing.rst
docs/introduction/: about.rst  index.rst  installation.rst  overview.rst  quick-start.rst
src/dbx/: __init__.py  cli.py
src/dbx/commands/: __init__.py  repo.py
src/dbx_python_cli/: __init__.py  cli.py  config.toml
src/dbx_python_cli/commands/: branch.py  clone.py  config.py  docs.py  edit.py  env.py  fetch.py  install.py  just.py  list.py  log.py  mongodb.py  open.py  patch.py  project.py  project_utils.py  pull.py  remote.py  remove.py  repo.py  repo_utils.py  reset.py  status.py  switch.py  sync.py  test.py  venv_utils.py
src/dbx_python_cli/templates/app_template/app_name/: apps.py
src/dbx_python_cli/templates/project_template/: justfile  pyproject.toml
src/dbx_python_cli/templates/project_template/project_name/: apps.py  routers.py  wagtail.py
src/dbx_python_cli/templates/project_template/project_name/settings/: base.py  mongodb.py  postgresql.py  project_name.py  qe.py  wagtail.py
src/dbx_python_cli/templates/project_template/project_name/settings/apps/: wagtail.py
src/dbx_python_cli/utils/: output.py  project.py  repo.py
tests/: __init__.py  conftest.py  test_branch_command.py  test_cli.py  test_clone_command.py  test_edit_command.py  test_env_command.py  test_fetch_command.py  test_install_command.py  test_just_command.py  test_log_command.py  test_open_command.py  test_project_command.py  test_pull_command.py  test_remote_command.py  test_remove_command.py  test_repo.py  test_repo_utils.py  test_status_command.py  test_switch_command.py  test_test_command.py  test_venv_utils.py  test_version.py
tests/integration/: __init__.py  conftest.py  test_env_integration.py  test_install_integration.py  test_just_integration.py  test_project_integration.py  test_repo_integration.py  test_test_integration.py
