[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx"
version = "0.1.0"
description = "A command line tool for DBX Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
dbx = "dbx.cli:app"

