# Build system configuration (PEP 517/518)
# Explicitly specifying the build backend is best practice for reproducible builds.
# Without this section, build tools fall back to legacy setuptools behavior.
#
# setuptools.build_meta vs setuptools.build_meta:__legacy__:
# - build_meta: Modern PEP 517 backend, uses pyproject.toml for all configuration
# - build_meta:__legacy__: Fallback mode that also reads setup.py/setup.cfg
# We use the modern backend since all our config is in pyproject.toml.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx"
version = "0.1.0"
description = "A command line tool for DBX Python development tasks. AI first. De-siloing happens here."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
]

[project.scripts]
dbx = "dbx.cli:app"

