# Build system configuration (PEP 517/518)
# Explicitly specifying the build backend is best practice for reproducible builds.
# Without this section, build tools fall back to legacy setuptools behavior.
#
# setuptools.build_meta vs setuptools.build_meta:__legacy__:
# - build_meta: Modern PEP 517 backend, uses pyproject.toml for all configuration
# - build_meta:__legacy__: Fallback mode that also reads setup.py/setup.cfg
# We use the modern backend since all our config is in pyproject.toml.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx"
version = "0.1.0"
description = "A command line tool for DBX Python development tasks. AI first. De-siloing happens here."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "dbx[docs,test]",
]

[project.scripts]
dbx = "dbx.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=dbx",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.dbx.repo]
base_dir = "~/repos"

[tool.dbx.repo.groups.pymongo]
repos = [
    "https://github.com/mongodb/mongo-python-driver.git",
]

[tool.dbx.repo.groups.langchain]
repos = [
    "https://github.com/langchain-ai/langchain.git",
]

[tool.dbx.repo.groups.django]
repos = [
    "https://github.com/django/django.git",
]
